spacing issues in IdentitySelector

--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ header {
     text-decoration: none;
     text-align: center;
 
-    &.active {
+    &.selected {
       border: 2px solid $black;
     }
   }
@@ -165,6 +165,11 @@ header {
 
 .icon-picker > a {
   border: 1px solid #eee;
+  padding: 1px;
+
+  &.selected {
+    padding: 0px;
+  }
 }
 
 .identity-selector {
